add home page and viewport

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <script>
+      !function(win,doc){win.document.write('<meta name="viewport" content="initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=0">');function setFontSize(){var a=win;var j,b=a.document,c=b.documentElement,d=a.orientation||0,e=750,f=9/16,g=100,h=a.devicePixelRatio,i=1;j=c.getBoundingClientRect().width,90==Math.abs(d)&&(j*=f),c.style.fontSize=j/ h * g /(e/h)+"px"}setFontSize();setTimeout(function(){setFontSize()},500)}(window,document);
+    </script>
     <title>tank</title>
   </head>
   <body>
